# coiled-test-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
src/project/: config.py  task_data_catalog.py  task_local_path.py  task_python_nodes.py
