[project]
name = "project"
version = "0.1.0"
description = "A project to test coiled."
authors = [
    { name = "Tobias Raabe", email = "raabe@posteo.de" }
]
dependencies = [
    "pytask>=0.4.5",
    "pytask-parallel[coiled]>=0.4.1",
    "s3fs>=2024.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["src"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py38"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-ignore = [
    "ANN101",  # type annotating self
    "ANN102",  # type annotating cls
    "ANN401",  # flake8-annotate typing.Any
    "COM812",  # Comply with ruff-format.
    "ISC001",  # Comply with ruff-format.
    "D",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/*" = ["S101"]
"tests/*" = ["D", "ANN", "PLR2004", "S101"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytask.ini_options]
